plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.2'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.project.shop'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	
	//@Notblank 어노테이션 사용용
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	
	// 타임리프
	implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '3.0.0'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	
	// 스프링 시큐리티
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	
	//JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// QueryDsl
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
		annotationProcessor (
			"jakarta.persistence:jakarta.persistence-api",
			"jakarta.annotation:jakarta.annotation-api",
			"com.querydsl:querydsl-apt:5.0.0:jakarta"
		)

	implementation 'org.modelmapper:modelmapper:3.1.1'


	// 스프링 프레임워크
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	
	// slf4j 로깅
	// https://mvnrepository.com/artifact/org.slf4j/slf4j-api
	implementation 'org.slf4j:slf4j-api:2.0.7'
	
	// logback 로깅
	// https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
	testImplementation 'ch.qos.logback:logback-classic:1.4.7'


	tasks.named('test') {
		useJUnitPlatform()
	}
}